cmake_minimum_required(VERSION 3.24)

include(FetchContent)

set(TARGET detours)
project(${TARGET} VERSION 1.0)

option(DETOURS_CL_17_OR_NEWER "DETOURS_CL_17_OR_NEWER" ON)
option(DETOURS_WIN_7 "DETOURS_WIN_7" OFF)
option (DETOURS_SOURCE_BROWSING "DETOURS_SOURCE_BROWSING" ON)

FetchContent_Declare(
	libdetours
	GIT_REPOSITORY https://github.com/microsoft/Detours.git
	GIT_TAG        e4bfd6b03e50de46b47abfbd1e46b384f0c5f833
)

FetchContent_MakeAvailable(libdetours)
set(DETOURS_SOURCE "${libdetours_SOURCE_DIR}/src")

file(GLOB_RECURSE srcs "${DETOURS_SOURCE}/*.cpp" "${DETOURS_SOURCE}/*.h")
add_library(${TARGET} STATIC ${srcs})

set_property(
    SOURCE ${DETOURS_SOURCE}/uimports.cpp
    APPEND PROPERTY HEADER_FILE_ONLY true
)

set(COMPILE_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /nologo /W4 /WX /we4777 /we4800 /Zi /MT /Gy /Gm- /Zl /Od")
set(COMPILE_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /nologo /W4 /WX /we4777 /we4800 /Zi /MT /Gy /Gm- /Zl /Od")
set(COMPILE_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /nologo /W4 /WX /we4777 /we4800 /Zi /MT /Gy /Gm- /Zl /Od")

if ((NOT ${DETOURS_WIN_7}) AND ${DETOURS_CL_17_OR_NEWER})
	set(COMPILE_FLAGS_RELEASE "${COMPILE_FLAGS_RELEASE} /D_USING_V110_SDK71_")
	set(COMPILE_FLAGS_RELWITHDEBINFO "${COMPILE_FLAGS_RELWITHDEBINFO} /D_USING_V110_SDK71_")
	set(COMPILE_FLAGS_DEBUG "${COMPILE_FLAGS_DEBUG} /D_USING_V110_SDK71_")
endif()

if(DETOURS_SOURCE_BROWSING)
	set(COMPILE_FLAGS_RELEASE "${COMPILE_FLAGS_RELEASE} /FR")
	set(COMPILE_FLAGS_RELWITHDEBINFO "${COMPILE_FLAGS_RELWITHDEBINFO} /FR")
	set(COMPILE_FLAGS_DEBUG "${COMPILE_FLAGS_DEBUG} /FR")
else()
	set(COMPILE_FLAGS_RELEASE "${COMPILE_FLAGS_RELEASE} /DWIN32_LEAN_AND_MEAN /D_WIN32_WINNT=0x501")
	set(COMPILE_FLAGS_RELWITHDEBINFO "${COMPILE_FLAGS_RELWITHDEBINFO} /DWIN32_LEAN_AND_MEAN /D_WIN32_WINNT=0x501")
	set(COMPILE_FLAGS_DEBUG "${COMPILE_FLAGS_DEBUG} /DWIN32_LEAN_AND_MEAN /D_WIN32_WINNT=0x501")
endif()

if(CMAKE_SIZEOF_VOID_P EQUAL 8)
	add_definitions(-D_AMD64_)
else()
	add_definitions(-D_X86_)
endif()

include(CMakePrintHelpers)
cmake_print_variables(COMPILE_FLAGS_RELEASE)
cmake_print_variables(COMPILE_FLAGS_RELWITHDEBINFO)
cmake_print_variables(COMPILE_FLAGS_DEBUG)

set(CMAKE_CXX_FLAGS_RELEASE "${COMPILE_FLAGS_RELEASE}")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${COMPILE_FLAGS_RELWITHDEBINFO}")
set(CMAKE_CXX_FLAGS_DEBUG "${COMPILE_FLAGS_DEBUG}")

target_include_directories(${TARGET} PUBLIC ${DETOURS_SOURCE})